MainMenu, HP Bar,  Animations

--- a/Tanki/Config/DefaultEngine.ini
+++ b/Tanki/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Core/FirstLevel.FirstLevel
-EditorStartupMap=/Game/Core/FirstLevel.FirstLevel
+GameDefaultMap=/Game/Core/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Core/MenuLevel.MenuLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
