edit RadioButtonsWidgetStyle, RadioButtonsList, RadioButtons classes
добавил поддержку изменения стиля в классы для работы стилей в RadioButtonsList (в виджете некорректно отображается текст и кнопки)

--- a/Tanki/Config/DefaultEngine.ini
+++ b/Tanki/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Core/MenuLevel.MenuLevel
-EditorStartupMap=/Game/Core/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Core/FirstLevel.FirstLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
