создан класс для сохранения игры и подключён в настройках проекта

--- a/Tanki/Config/DefaultEngine.ini
+++ b/Tanki/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Core/MenuLevel.MenuLevel
 EditorStartupMap=/Game/Core/FirstLevel.FirstLevel
+GameInstanceClass=/Script/Tanki.MyGameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
