--- a/Tanki/Config/DefaultEngine.ini
+++ b/Tanki/Config/DefaultEngine.ini
@@ -73,3 +73,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+MinSDKVersion=24
+TargetSDKVersion=24
+bPackageDataInsideApk=True
+
